--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
   },
   "scripts": {
     "build": "node utils/build.js",
+    "build-fast": "node utils/build.js --fast -j10",
     "start": "node utils/webserver.js",
+    "start-fast": "node utils/webserver.js --fast -j10",
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "dependencies": {
+    "@googleapis/docs": "^1.0.1",
     "@hot-loader/react-dom": "^17.0.2",
+    "fs": "0.0.1-security",
+    "googleapis": "^39.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0"
+    "react-hot-loader": "^4.13.0",
+    "readline": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
